Removing ASD from indiv-counts-modeling

--- a/notebook/2021-03-09-gwas-genes/2021-03-09-gwas-genes.ipynb
+++ b/notebook/2021-03-09-gwas-genes/2021-03-09-gwas-genes.ipynb
@@ -23,6 +23,7 @@
     "from bsmcalls import SNPnexus\n",
     "from bsmcalls import operations\n",
     "from bsmcalls import resources\n",
+    "from bsmcalls import preprocessing\n",
     "from matplotlib import pyplot as plt\n",
     "import re\n",
     "import attila_utils\n",
@@ -251,7 +252,7 @@
      "output_type": "stream",
      "text": [
       "79 genes\n",
-      "{'RSRC1', 'RSU1', 'LINC02790', 'U91319.1', 'MAPT', 'ASAP1', 'NEDD4L', 'AC025839.1', 'AC092506.1', 'AL032822.1', 'NKX2-4', 'AL136456.1', 'AL589740.1', 'PCDH9', 'SERPINA2', 'ADTRP', 'OLFM4', 'NEGR1', 'GABBR1', 'GALNT10', 'SGO1-AS1', 'LINC02210-CRHR1', 'SORCS3', 'SERPINA1', 'EEF1A1P11', 'ZNF877P', 'BEND4', 'CADPS', 'C8orf74', 'FGF12', 'LINC02058', 'MACROD2', 'NKX2-2', 'LINC00461', 'ZNF568', 'AC099520.1', 'RNU7-160P', 'AL391117.1', 'U95743.1', 'RP1L1', 'AC013287.1', 'PKP4', 'AC026320.3', 'AC120036.1', 'KANSL1', 'GALNT1', 'MROH5', 'AL139300.2', 'RNU1-130P', 'ITIH4', 'RBFOX1', 'PAUPAR', 'AC021192.2', 'SRPK2', 'PTBP2', 'AL035078.4', 'NRGN', 'SOX7', 'AC095031.1', 'AC005070.3', 'GUCY1A2', 'EGR2', 'PINX1', 'AL591888.1', 'XRN2', 'LINC01776', 'ESRRB', 'AC090987.1', 'AL139093.1', 'AL133270.1', 'LOC102723661', 'KCNN2', 'KMT2E', 'ITIH3', 'RN7SL831P', 'AC022387.1', 'AL022724.3', 'AL117332.1', 'KIZ'}\n"
+      "{'AC005070.3', 'AC022387.1', 'NKX2-2', 'ASAP1', 'RN7SL831P', 'AC095031.1', 'ADTRP', 'PINX1', 'AC099520.1', 'LINC02210-CRHR1', 'LINC02058', 'AL139093.1', 'NRGN', 'RSRC1', 'AC092506.1', 'RBFOX1', 'C8orf74', 'PKP4', 'EGR2', 'LINC00461', 'ITIH3', 'SORCS3', 'U91319.1', 'ZNF568', 'ZNF877P', 'SOX7', 'AC025839.1', 'RNU7-160P', 'AC013287.1', 'GALNT10', 'AC090987.1', 'PCDH9', 'LINC02790', 'LOC102723661', 'AL589740.1', 'GABBR1', 'KANSL1', 'AL133270.1', 'FGF12', 'NEDD4L', 'AL032822.1', 'AL139300.2', 'KIZ', 'XRN2', 'CADPS', 'MAPT', 'AL136456.1', 'AL591888.1', 'AC026320.3', 'NKX2-4', 'KMT2E', 'ITIH4', 'MACROD2', 'AC120036.1', 'SERPINA1', 'RP1L1', 'NEGR1', 'EEF1A1P11', 'AC021192.2', 'ESRRB', 'GALNT1', 'PAUPAR', 'LINC01776', 'SRPK2', 'U95743.1', 'SERPINA2', 'RNU1-130P', 'BEND4', 'SGO1-AS1', 'RSU1', 'AL022724.3', 'KCNN2', 'AL391117.1', 'AL117332.1', 'AL035078.4', 'PTBP2', 'GUCY1A2', 'OLFM4', 'MROH5'}\n"
      ]
     }
    ],
@@ -570,7 +571,24 @@
     "* Schizophrenia; PMID: [29483656](https://pubmed.ncbi.nlm.nih.gov/29483656/); Pardiñas et al 2018 Nat Genet\n",
     "\n",
     "The following psychiatric disorders do not correlate with schizophrenia nor ASD:\n",
-    "* Tourette syndrome; PMID: [30818990](https://pubmed.ncbi.nlm.nih.gov/30818990/); Yu et al 2019 Am J Psychiatry"
+    "* Anxdiety disorders\n",
+    "* OCD\n",
+    "* PTSD\n",
+    "* Tourette syndrome; PMID: [30818990](https://pubmed.ncbi.nlm.nih.gov/30818990/); Yu et al 2019 Am J Psychiatry\n",
+    "\n",
+    "None of the following neurological diseases showed significant correlation with schizophrenia or ASD:\n",
+    "* Alzheimer's disease\n",
+    "* Epilepsy\n",
+    "* Focal epilepsy\n",
+    "* Generalized epilepsy\n",
+    "* ICH\n",
+    "* Ischemic stroke\n",
+    "* Early-onset stroke\n",
+    "* Migraine\n",
+    "* Migraine with aura\n",
+    "* Migraine without aura\n",
+    "* Multiple schlerosis\n",
+    "* Parkinson's disease"
    ]
   },
   {
@@ -1145,8 +1163,351 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The same without ASD"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/attila/anaconda3/lib/python3.7/site-packages/pandas/core/generic.py:3889: PerformanceWarning: dropping on a non-lexsorted multi-index without a level parameter may impact performance.\n",
+      "  obj = obj._drop_axis(labels, axis, level=level, errors=errors)\n",
+      "/home/attila/anaconda3/lib/python3.7/site-packages/scipy/stats/stats.py:5982: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  terms = (f_obs.astype(np.float64) - f_exp)**2 / f_exp\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>Control</th>\n",
+       "      <th>SCZ</th>\n",
+       "      <th>chisq stat</th>\n",
+       "      <th>chisq p</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Feature</th>\n",
+       "      <th>Query</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">near_gens_Annotation</th>\n",
+       "      <th>coding nonsyn</th>\n",
+       "      <td>23</td>\n",
+       "      <td>43</td>\n",
+       "      <td>0.707206</td>\n",
+       "      <td>0.400373</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>coding syn</th>\n",
+       "      <td>16</td>\n",
+       "      <td>20</td>\n",
+       "      <td>0.307556</td>\n",
+       "      <td>0.579184</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>missense</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>stop-gain</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.505142</td>\n",
+       "      <td>0.219882</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>intronic (splice_site)</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.664389</td>\n",
+       "      <td>0.415015</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ensembl_Predicted Function</th>\n",
+       "      <th>coding</th>\n",
+       "      <td>39</td>\n",
+       "      <td>64</td>\n",
+       "      <td>0.181154</td>\n",
+       "      <td>0.670383</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">sift_Prediction</th>\n",
+       "      <th>Deleterious</th>\n",
+       "      <td>8</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0.361448</td>\n",
+       "      <td>0.547703</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Deleterious - Low Confidence</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.084766</td>\n",
+       "      <td>0.770940</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">polyphen_Prediction</th>\n",
+       "      <th>Probably Damaging</th>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.019501</td>\n",
+       "      <td>0.888940</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Possibly Damaging</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.169531</td>\n",
+       "      <td>0.680529</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>tfbs_TFBS Name</th>\n",
+       "      <th>any</th>\n",
+       "      <td>48</td>\n",
+       "      <td>78</td>\n",
+       "      <td>0.174529</td>\n",
+       "      <td>0.676118</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>phast_Score</th>\n",
+       "      <th>any</th>\n",
+       "      <td>102</td>\n",
+       "      <td>174</td>\n",
+       "      <td>1.009212</td>\n",
+       "      <td>0.315092</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>gerp_Element RS Score</th>\n",
+       "      <th>any</th>\n",
+       "      <td>140</td>\n",
+       "      <td>262</td>\n",
+       "      <td>4.346044</td>\n",
+       "      <td>0.037095</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>cpg_CpG Island</th>\n",
+       "      <th>any</th>\n",
+       "      <td>26</td>\n",
+       "      <td>47</td>\n",
+       "      <td>0.563172</td>\n",
+       "      <td>0.452985</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"14\" valign=\"top\">near_gens_Overlapped Gene</th>\n",
+       "      <th>ADHD reported</th>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.000014</td>\n",
+       "      <td>0.997009</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ADHD</th>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.000014</td>\n",
+       "      <td>0.997009</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Anorexia nervosa reported</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.084766</td>\n",
+       "      <td>0.770940</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Anorexia nervosa</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.084766</td>\n",
+       "      <td>0.770940</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ASD reported</th>\n",
+       "      <td>0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>3.986334</td>\n",
+       "      <td>0.045871</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ASD</th>\n",
+       "      <td>2</td>\n",
+       "      <td>20</td>\n",
+       "      <td>8.717100</td>\n",
+       "      <td>0.003152</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Bipolar disorder reported</th>\n",
+       "      <td>23</td>\n",
+       "      <td>53</td>\n",
+       "      <td>2.953804</td>\n",
+       "      <td>0.085676</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Bipolar disorder</th>\n",
+       "      <td>28</td>\n",
+       "      <td>63</td>\n",
+       "      <td>3.175733</td>\n",
+       "      <td>0.074740</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MDD reported</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MDD</th>\n",
+       "      <td>13</td>\n",
+       "      <td>27</td>\n",
+       "      <td>0.917716</td>\n",
+       "      <td>0.338075</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Shizophrenia reported</th>\n",
+       "      <td>11</td>\n",
+       "      <td>43</td>\n",
+       "      <td>8.603289</td>\n",
+       "      <td>0.003356</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Shizophrenia</th>\n",
+       "      <td>11</td>\n",
+       "      <td>43</td>\n",
+       "      <td>8.603289</td>\n",
+       "      <td>0.003356</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Psychiatric reported</th>\n",
+       "      <td>34</td>\n",
+       "      <td>97</td>\n",
+       "      <td>10.650237</td>\n",
+       "      <td>0.001101</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Psychiatric</th>\n",
+       "      <td>49</td>\n",
+       "      <td>127</td>\n",
+       "      <td>10.703282</td>\n",
+       "      <td>0.001069</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                         Control  SCZ  \\\n",
+       "Feature                    Query                                        \n",
+       "near_gens_Annotation       coding nonsyn                      23   43   \n",
+       "                           coding syn                         16   20   \n",
+       "                           missense                            0    0   \n",
+       "                           stop-gain                           1    0   \n",
+       "                           intronic (splice_site)              0    1   \n",
+       "ensembl_Predicted Function coding                             39   64   \n",
+       "sift_Prediction            Deleterious                         8    9   \n",
+       "                           Deleterious - Low Confidence        1    1   \n",
+       "polyphen_Prediction        Probably Damaging                   3    5   \n",
+       "                           Possibly Damaging                   2    2   \n",
+       "tfbs_TFBS Name             any                                48   78   \n",
+       "phast_Score                any                               102  174   \n",
+       "gerp_Element RS Score      any                               140  262   \n",
+       "cpg_CpG Island             any                                26   47   \n",
+       "near_gens_Overlapped Gene  ADHD reported                       2    3   \n",
+       "                           ADHD                                2    3   \n",
+       "                           Anorexia nervosa reported           1    1   \n",
+       "                           Anorexia nervosa                    1    1   \n",
+       "                           ASD reported                        0    6   \n",
+       "                           ASD                                 2   20   \n",
+       "                           Bipolar disorder reported          23   53   \n",
+       "                           Bipolar disorder                   28   63   \n",
+       "                           MDD reported                        0    0   \n",
+       "                           MDD                                13   27   \n",
+       "                           Shizophrenia reported              11   43   \n",
+       "                           Shizophrenia                       11   43   \n",
+       "                           Psychiatric reported               34   97   \n",
+       "                           Psychiatric                        49  127   \n",
+       "\n",
+       "                                                         chisq stat   chisq p  \n",
+       "Feature                    Query                                               \n",
+       "near_gens_Annotation       coding nonsyn                   0.707206  0.400373  \n",
+       "                           coding syn                      0.307556  0.579184  \n",
+       "                           missense                             NaN       NaN  \n",
+       "                           stop-gain                       1.505142  0.219882  \n",
+       "                           intronic (splice_site)          0.664389  0.415015  \n",
+       "ensembl_Predicted Function coding                          0.181154  0.670383  \n",
+       "sift_Prediction            Deleterious                     0.361448  0.547703  \n",
+       "                           Deleterious - Low Confidence    0.084766  0.770940  \n",
+       "polyphen_Prediction        Probably Damaging               0.019501  0.888940  \n",
+       "                           Possibly Damaging               0.169531  0.680529  \n",
+       "tfbs_TFBS Name             any                             0.174529  0.676118  \n",
+       "phast_Score                any                             1.009212  0.315092  \n",
+       "gerp_Element RS Score      any                             4.346044  0.037095  \n",
+       "cpg_CpG Island             any                             0.563172  0.452985  \n",
+       "near_gens_Overlapped Gene  ADHD reported                   0.000014  0.997009  \n",
+       "                           ADHD                            0.000014  0.997009  \n",
+       "                           Anorexia nervosa reported       0.084766  0.770940  \n",
+       "                           Anorexia nervosa                0.084766  0.770940  \n",
+       "                           ASD reported                    3.986334  0.045871  \n",
+       "                           ASD                             8.717100  0.003152  \n",
+       "                           Bipolar disorder reported       2.953804  0.085676  \n",
+       "                           Bipolar disorder                3.175733  0.074740  \n",
+       "                           MDD reported                         NaN       NaN  \n",
+       "                           MDD                             0.917716  0.338075  \n",
+       "                           Shizophrenia reported           8.603289  0.003356  \n",
+       "                           Shizophrenia                    8.603289  0.003356  \n",
+       "                           Psychiatric reported           10.650237  0.001101  \n",
+       "                           Psychiatric                    10.703282  0.001069  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results = operations.multiquery(querydict, data, do_sum=False, do_sort=False)\n",
+    "summary = operations.summarize_query_results(results, preprocessing.drop_category(data, 'ASD'), chisq=True, margin=False)\n",
+    "summary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
