wrote gene sets to TSV for Eduardo

--- a/notebook/2021-03-09-gwas-genes/2021-03-09-gwas-genes.ipynb
+++ b/notebook/2021-03-09-gwas-genes/2021-03-09-gwas-genes.ipynb
@@ -252,7 +252,7 @@
      "output_type": "stream",
      "text": [
       "79 genes\n",
-      "{'ESRRB', 'U91319.1', 'SERPINA2', 'SGO1-AS1', 'NEGR1', 'ADTRP', 'AL133270.1', 'GALNT1', 'BEND4', 'AC021192.2', 'PAUPAR', 'RP1L1', 'LINC02790', 'AC120036.1', 'KANSL1', 'RBFOX1', 'MAPT', 'ITIH3', 'AC026320.3', 'AC092506.1', 'AL136456.1', 'AC099520.1', 'PCDH9', 'AL032822.1', 'RSU1', 'AL391117.1', 'AL591888.1', 'NRGN', 'SRPK2', 'AL022724.3', 'ZNF877P', 'LOC102723661', 'PTBP2', 'ASAP1', 'AC022387.1', 'AC025839.1', 'ITIH4', 'LINC00461', 'MACROD2', 'RNU1-130P', 'MROH5', 'XRN2', 'LINC02210-CRHR1', 'PKP4', 'AC090987.1', 'EGR2', 'SERPINA1', 'KMT2E', 'AL117332.1', 'ZNF568', 'AL139093.1', 'NEDD4L', 'KIZ', 'KCNN2', 'CADPS', 'EEF1A1P11', 'AL139300.2', 'GALNT10', 'PINX1', 'GABBR1', 'LINC02058', 'AL035078.4', 'SORCS3', 'RSRC1', 'C8orf74', 'NKX2-2', 'RNU7-160P', 'NKX2-4', 'AL589740.1', 'LINC01776', 'AC095031.1', 'RN7SL831P', 'SOX7', 'AC013287.1', 'OLFM4', 'U95743.1', 'GUCY1A2', 'AC005070.3', 'FGF12'}\n"
+      "{'NRGN', 'AL022724.3', 'NKX2-4', 'AL117332.1', 'RNU1-130P', 'MAPT', 'FGF12', 'AC092506.1', 'PINX1', 'LINC01776', 'AC022387.1', 'ZNF877P', 'AC120036.1', 'AL589740.1', 'LINC02790', 'AL032822.1', 'ITIH3', 'GUCY1A2', 'LINC00461', 'AL391117.1', 'MROH5', 'U95743.1', 'AC090987.1', 'EGR2', 'NEGR1', 'SERPINA1', 'ZNF568', 'AC099520.1', 'SOX7', 'AL035078.4', 'AL133270.1', 'RBFOX1', 'PAUPAR', 'PTBP2', 'KCNN2', 'AL136456.1', 'CADPS', 'AC025839.1', 'BEND4', 'NEDD4L', 'KIZ', 'OLFM4', 'PKP4', 'NKX2-2', 'GABBR1', 'RSRC1', 'SRPK2', 'AL591888.1', 'LINC02058', 'PCDH9', 'RN7SL831P', 'MACROD2', 'AC005070.3', 'AC095031.1', 'U91319.1', 'SGO1-AS1', 'EEF1A1P11', 'C8orf74', 'RSU1', 'AL139093.1', 'AC026320.3', 'ADTRP', 'ITIH4', 'SORCS3', 'KANSL1', 'ESRRB', 'ASAP1', 'KMT2E', 'GALNT10', 'AC013287.1', 'RP1L1', 'LOC102723661', 'LINC02210-CRHR1', 'AL139300.2', 'AC021192.2', 'XRN2', 'RNU7-160P', 'SERPINA2', 'GALNT1'}\n"
      ]
     }
    ],
@@ -778,6 +778,9 @@
     "        psychiatric_reported.update(gset)\n",
     "    else:\n",
     "        psychiatric.update(gset)\n",
+    "    bname = k.replace(' ', '-') + '.tsv'\n",
+    "    fpath = '../../results/2021-03-09-gwas-genes/' + bname\n",
+    "    pd.DataFrame({k: sorted(list(psychiatric_genesets[k]))}).to_csv(fpath, sep='\\t', index=False)\n",
     "\n",
     "print('Number of genes in associated to any psychiatric disorder:')\n",
     "print(len(psychiatric_reported), 'reported')\n",
@@ -1515,13 +1518,13 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "  \"shell_port\": 43719,\n",
-      "  \"iopub_port\": 32865,\n",
-      "  \"stdin_port\": 51125,\n",
-      "  \"control_port\": 42299,\n",
-      "  \"hb_port\": 39901,\n",
+      "  \"shell_port\": 57503,\n",
+      "  \"iopub_port\": 47977,\n",
+      "  \"stdin_port\": 44435,\n",
+      "  \"control_port\": 44215,\n",
+      "  \"hb_port\": 42639,\n",
       "  \"ip\": \"127.0.0.1\",\n",
-      "  \"key\": \"f07d7b33-52881ffd16f77ba87e5d407b\",\n",
+      "  \"key\": \"d075aebb-e332663a3a5aa2278f13a72d\",\n",
       "  \"transport\": \"tcp\",\n",
       "  \"signature_scheme\": \"hmac-sha256\",\n",
       "  \"kernel_name\": \"\"\n",
@@ -1530,7 +1533,7 @@
       "Paste the above JSON into a file, and connect with:\n",
       "    $> jupyter <app> --existing <file>\n",
       "or, if you are local, you can connect with just:\n",
-      "    $> jupyter <app> --existing kernel-21fe3845-381c-44ce-8e0f-ea4054ffd6d7.json\n",
+      "    $> jupyter <app> --existing kernel-024de690-ae5c-46d6-b676-be47cebc5665.json\n",
       "or even just:\n",
       "    $> jupyter <app> --existing\n",
       "if this is the most recent Jupyter kernel you have started.\n"
